# multisocks

./: .coveragerc  .gitignore  LICENSE  LICENSE.md  MANIFEST.in  README.md  mypy.ini  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: Build & Release.yml  wheels.yml
multisocks/: __init__.py  __main__.py  bandwidth.py  cli.py
multisocks/proxy/: __init__.py  proxy_info.py  proxy_manager.py  server.py
tests/: __init__.py  conftest.py  test_bandwidth.py  test_cli.py  test_coverage_completion.py  test_direct.py  test_init.py  test_main_execution.py  test_proxy.py  test_proxy_info.py  test_proxy_manager.py  test_server.py  test_socks.py  test_working_proxy.py
