[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multisocks"
version = "1.0.1"
authors = [
    {name = "tboy1337", email = "obywhuie@anonaddy.com"},
]
description = "A SOCKS proxy that aggregates multiple remote SOCKS proxies"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]
dependencies = [
    "asyncio",
    "python-socks",
    "aiohttp",
    "colorama",
    "typing_extensions",
    "pysocks",
    "statistics",
]

[project.urls]
"Homepage" = "https://github.com/tboy1337/multisocks"
"Bug Tracker" = "https://github.com/tboy1337/multisocks/issues"

[project.scripts]
multisocks = "multisocks.cli:main"

[tool.setuptools.packages.find]
include = ["multisocks*"] 